# ml-tech-assessment

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test  README.md  demo_api.py  demonstration.md  docker-compose.test.yml  docker-compose.yml  plan.md  pyproject.toml
app/: __init__.py  exceptions.py
app/adapters/: __init__.py  memory_repository.py  openai.py
app/api/: __init__.py  dependencies.py  main.py  routes.py  schemas.py
app/domain/: __init__.py  dtos.py  models.py
app/ports/: __init__.py  (+2 more)
tests/: conftest.py
tickets/: 001-add-exception-handling-openai-adapter.md  002-add-exception-handling-service-layer.md  003-add-exception-handling-api-routes.md  004-add-async-method-to-llm-port.md  005-fix-thread-safety-memory-repository.md  006-add-rate-limiting.md  007-add-authentication.md  008-add-retry-logic-openai.md  009-add-comprehensive-logging.md  010-add-input-validation-limits.md  011-add-error-scenario-tests.md  012-add-concurrent-access-tests.md  013-extract-duplicate-prompt-logic.md  014-extract-shared-test-fixtures.md  015-add-request-timeout-configuration.md  016-limit-batch-concurrency.md  017-add-type-hints-openai-adapter.md  018-add-dependency-version-bounds.md  019-make-prompts-configurable.md  020-add-health-check-details.md  021-add-async-repository-interface.md  022-add-api-key-validation.md  023-add-integration-tests.md  024-add-deployment-documentation.md  025-add-module-exports.md  026-add-transcript-caching.md  027-add-security-tests.md  028-add-circuit-breaker.md  029-http-method-discrepancy-get-vs-post.md  README.md
(+7 files in other folders)
